# fdk-rdf-parser

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: audit.yml  codeql.yml  constraints.txt  coverage.yml  release.yml  safety.yml  test-pypi.yml  tests.yml
docs/: conf.py
src/fdk_rdf_parser/: __init__.py  contactpoint.py  dataset.py  dcat_resource.py  distribution.py  fdk_rdf_parser.py  harvest_meta_data.py  metadata.py  parse_classes.py  rdf_utils.py  references.py  temporal.py
src/fdk_rdf_parser/classes/: __init__.py  address.py  agent.py  businessEvent.py  business_event.py  catalog.py  channel.py  concept.py  conforms_to.py  contactpoint.py  cost.py  cpsvno_service.py  criterion_requirement.py  data_distribution_service.py  data_service.py  dataservice.py  dataset.py  dcat_resource.py  dct_standard.py  distribution.py  event.py  evidence.py  exceptions.py  format.py  harvest_meta_data.py  info_model.py  legal_resource.py  lifeEvent.py  life_event.py  media_type.py  model_element.py  model_property.py  opening_hours_specification.py  organization.py  output.py  participation.py  public_service.py  publisher.py  qualified_attribution.py  quality_annotation.py  (+11 more)
src/fdk_rdf_parser/organizations/: __init__.py  organizations.py  organizations_client.py  utils.py
src/fdk_rdf_parser/parse_functions/: __init__.py  address.py  agent.py  catalog.py  channel.py  concept.py  conforms_to.py  contactpoint.py  cost.py  cpsvno_service.py  criterion_requirement.py  data_distribution_service.py  data_service.py  dataservice.py  dataset.py  dcat_resource.py  dct_standard.py  distribution.py  event.py  evidence.py  format.py  harvest_meta_data.py  info_model.py  legal_resource.py  media_type.py  model_element.py  model_property.py  opening_hours_specification.py  organization.py  output.py  participation.py  public_service.py  publisher.py  qualified_attribution.py  quality_annotation.py  reference_data_code.py  references.py  requirement.py  rule.py  schema_contact_point.py  (+6 more)
src/fdk_rdf_parser/rdf_utils/: __init__.py  ns.py  utils.py
src/fdk_rdf_parser/reference_data/: __init__.py  extend_cpsvno_service.py  extend_dataservice.py  extend_dataset.py  extend_info_model.py  extend_public_service.py  reference_data.py  reference_data_client.py  utils.py
tests/: __init__.py  conftest.py  test_concept.py  test_contactpoint.py  test_data_distribution_service.py  test_data_service.py  test_dataset.py  test_dataset_series.py  test_dcat_resource.py  test_distribution.py  test_event.py  test_exceptions.py  test_extend_data_service_with_reference_data.py  test_extend_dataset_with_reference_data.py  test_extend_public_service_with_reference_data.py  test_extend_with_reference_data.py  test_info_model.py  test_model_element.py  test_model_property.py  test_organization.py  test_public_service.py  test_publisher.py  test_qualified_attribution.py  test_quality_annotation.py  test_rdf.py  test_reference_data.py  test_references.py  test_service_participation.py  test_skos_concept.py  test_subject.py  test_temporal.py  test_utils.py  testdata.py
tests/json_data/: eudatatheme.json  eutheme.json  evidencetypes.json  filetypes.json  frequency.json  fylker.json  kommuner.json  linguisticsystem.json  location.json  los.json  mediatypes.json  nasjoner.json  openlicenses.json  provenancestatement.json  publishertypes.json  referencetypes.json  rightsstatement.json  roletypes.json  serviceChannelTypes.json  statuses.json  types.json  weekdays.json
tests/test_data/: dataservice0.ttl  dataset_series0.ttl  event0.ttl  public_service0.ttl  public_service1.ttl  service0.ttl  service1.ttl
