[tool.poetry]
name = "fdk-rdf-parser"
version = "2.5.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
rdflib = "^7.0.0"
isodate = "^0.6.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
coverage = {extras = ["toml"], version = "^7.4.1"}
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.1.17"
flake8-import-order = "^0.18.2"
pep8-naming = "^0.13.3"
safety = "^3.0.1"
pytest-mock = "^3.12.0"
codecov = "^2.1.13"
flake8-annotations = "^3.0.1"
mypy = "^1.8.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_rdf_parser"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
line_length=120
multi_line_output=3

# from 'google' profile
force_sort_within_sections=true
lexicographical=true
order_by_type=false
group_by_package=true

force_grid_wrap=2
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before=["LOCALFOLDER"]
src_paths = ["src", "test"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
