[tool.poetry]
name = "fdk-rdf-parser"
version = "2.8.3"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rdflib = "^7.0.0"
isodate = "^0.6.1"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.6.4"}
pytest-cov = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
pep8-naming = "^0.14.1"
pytest-mock = "^3.14.0"
codecov = "^2.1.13"
flake8-annotations = "^3.1.1"
mypy = "^1.13.0"
nox = "^2024.10.9"
nox-poetry = "^1.0.3"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_rdf_parser"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
line_length=120
multi_line_output=3

# from 'google' profile
force_sort_within_sections=true
lexicographical=true
order_by_type=false
group_by_package=true

force_grid_wrap=2
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before=["LOCALFOLDER"]
src_paths = ["src", "test"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
