[tool.poetry]
name = "fdk-rdf-parser"
version = "2.9.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rdflib = "^7.2.1"
isodate = "^0.7.2"
requests = "^2.32.5"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
coverage = {extras = ["toml"], version = "^7.10.7"}
pytest-cov = "^7.0.0"
black = "^25.9.0"
flake8 = "^7.3.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^24.12.12"
flake8-import-order = "^0.19.2"
pep8-naming = "^0.15.1"
pytest-mock = "^3.15.1"
codecov = "^2.1.13"
flake8-annotations = "^3.1.1"
mypy = "^1.18.2"
nox = "^2025.5.1"
nox-poetry = "^1.2.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_rdf_parser"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
line_length=120
multi_line_output=3

# from 'google' profile
force_sort_within_sections=true
lexicographical=true
order_by_type=false
group_by_package=true

force_grid_wrap=2
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before=["LOCALFOLDER"]
src_paths = ["src", "test"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
